[package]
name = "overfn"
version = "0.1.1"
authors = ["Ferran Sanchez Llado"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ferranSanchezLlado/overfn.git"
homepage = "https://github.com/ferranSanchezLlado/overfn.git"
documentation = "https://docs.rs/overfn"
description = "Simple overloading system for functions with different arguments"
keywords = ["Overloading", "Function", "Variable", "Arguments", "Variadic"]
categories = ["development-tools"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.29"
syn = { version = "2.0.24", features = ["full"] }
once_cell = "1.18.0"

[lib]
proc-macro = true
